--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   postgres:
     hostname: postgres
-    image: postgres:15
+    image: postgres:latest
     ports:
       - "${PORT_LOCAL}:${PORT_INNER}"
     networks:
@@ -14,7 +14,7 @@ services:
       POSTGRES_DB: "${POSTGRES_DB}"
 
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready", "-d", "${POSTGRES_DB}", "-U", "${POSTGRES_USER}"]
+      test: "pg_isready -d ${POSTGRES_DB} -U ${POSTGRES_USER}"
       interval: 10s
       timeout: 30s
       retries: 5
@@ -34,7 +34,6 @@ services:
           service_healthy
     env_file:
       - .env
-
 
 networks:
   back-tier: {}
