--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   postgres:
     hostname: postgres
-    image: postgres:latest
+    image: postgres:15
     ports:
       - "${PORT_LOCAL}:${PORT_INNER}"
     networks:
